# EKFAC-Influence-Benchmarks

./: .gitignore  EKFAC_Understanding.ipynb  EKFAC_calculate_if_value.ipynb  bad_grad.pt  dataloader_util.py  download_pile_chpc.py  downloading_mnist_trans-8869798  downloading_mnist_trans-8870160  good_grad.pt  job.sh  pbrf_tensor.pt  pyproject.toml  pythia_test.py  random_search_ekfac_results.csv  requirements.txt  run_flan_t5_kronfluence.sh  run_flan_test.sh  run_flan_test_noaccel.sh  run_pythia_kronfluence.sh  run_pythia_test.sh  run_topk.sh  test_tensors.py  top_influences.txt  top_influences_cg.txt  top_influences_lissa.txt
_utils/: gv.py
evals/: flan_t5_kronfluence.py  flan_t5_test_noaccel.py  pythia_data_tester.py  pythia_kronfluence.py  pythia_test.py
influence/: __init__.py  base.py  example.py  example_pbrf.py  example_pbrf_with_gpt.py  kfac.py  modules.py
models/: linear_trained_model.pth
notebooks/: EKFAC_Understanding.ipynb  EKFAC_calculate_if_value.ipynb  Model_Eval.ipynb  PBRF_OVER_cancer_dataset.ipynb
pbrf/: calculate_pbrf_over_checkpoints.py  gnh_helpers.py  mnist_ihvp.py  pbrf_helpers.py  test_hessians.py
results/: PBRF_influence_scores.txt  PBRF_influence_scores_random_scaling_0.001_epsilon_1.txt  PBRF_influence_scores_random_scaling_0.01_epsilon_48000.txt  damp_search_results.csv  ekfac_ihvps_Linear(in_features=256, out_features=10, bias=True).txt  ekfac_influences_Linear(in_features=256, out_features=10, bias=True).txt  ekfac_influences_Linear(in_features=784, out_features=256, bias=True).txt  ekfac_influences_fc1_damp_0.0001.txt  (+47 more)
(+37 files in other folders)
